// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Html5 Player should render correctly in preview mode 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <svg
    className="widget-video-player-preview-play-button"
    fill="none"
    height="48"
    viewBox="0 0 48 48"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z"
      fill="#373737"
    />
    <path
      d="M16 12V36L34.8571 24L16 12Z"
      fill="white"
    />
  </svg>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  />
</div>
`;

exports[`Html5 Player should renders correctly 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with autoplay 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={true}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with controls 1`] = `
<div
  className="widget-video-player-html5-container widget-video-player-show-controls"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={true}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with loop 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={true}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with muted 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={true}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with poster 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="https://www.mendix.com/wp-content/themes/mendix/ui/images/homepage/air-status-app@2x.png"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
  </video>
</div>
`;
